2016-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* tools/openvas-nvt-sync.in: Change URL for feed tarball
	to use the dedicated community server.

2016-10-20  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	Backport parts of r26436.

	* tools/greenbone-nvt-sync.in: Update URL about general information
	about GSF.

2016-10-13  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26403.

	* src/openvassd.c (loading_handler_stop): Call terminate_process().
	Handles a race condition where the scanner tries to terminate the
	loading handler process before the later has set the signal handler.

2016-10-12  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginscheduler.c (plugin_next_unrun_dependency): Get oid from
	plugin arglist.

2016-10-11  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	Backport r26363.

	* src/pluginscheduler.c (plugin_next_unrun_dependency): Add parameter to
	check for infinite recursive calls caused by dependency cycles.
	(plugins_scheduler_next): Adjust plugin_next_unrun_dependency() function
	call.

2016-09-26  Timo Pollmeier <timo.pollmeier@greenbone.net>

	Backport r26271.

	* src/CMakeLists.txt: Add add_definitions for SCANNER_NVT_TIMEOUT to
	have it defined in the C code.

2016-09-06  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.8.

2016-09-06  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.7 release.

	* CHANGES: Updated.

2016-09-01  Timo Pollmeier <timo.pollmeier@greenbone.net>

	* src/nasl_plugins.c (nasl_plugin_launch): Do not free plugin arglist.

2016-08-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 5.0.7.

2016-08-30  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-scanner 5.0.6 release.

	* CHANGES: Updated.

2016-07-28  Matthew Mundell <matthew.mundell@greenbone.net>
