@@ -1,3 +1,10 @@
+2016-11-29  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
+	Backport r26731.
+
+	* src/openvassd.c (reload_openvassd): Reinitialize logging on scanner
+	reload.
+
 2016-10-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* tools/openvas-nvt-sync.in: Change URL for feed tarball
